tests/machine/x/python/outer_join.error
run: exit status 1
--- Outer Join using syntax ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/outer_join.py", line 122, in <module>
    if row["order"]:
       ~~~^^^^^^^^^
TypeError: 'Auto1' object is not subscriptable

